# S1000D-RAG

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  app_web.py  export_index.py  ingest.py  pyproject.toml  query.py
.streamlit/: config.toml
docs/: architecture.md  cgm_png_preview_feasibility.md  demo_golden_questions.md  langsmith_smoke_runbook.md  local_model_stack.md  presentation_script.md  rag_quality_evidence_report.md  runtime_smoke_eval_report.md
eval/: model_bakeoff_profiles.json
ontology/: s1000d_ontology.jsonld  s1000d_ontology.ttl  s1000d_ontology_graph.json
scripts/: build_graph_manifest.py  build_ontology_exports.py  build_ontology_manifest.py  caption_assets.py  eval_rag.py  export_ontology_rdf.py  local_model_env.py  model_bakeoff_plan.py  preview_multimodal_context.py  run_autonomous_500_qa_loop.py  run_langsmith_smoke.py  run_ontology_regression.py  run_quality_qa_loop.py  validate_ontology_shapes.py  verify_local_models.py  verify_rag_quality_gate.py
src/: config.py  tracing.py
static/: app.js  index.html  style.css
tests/: test_app_web_chat_jobs.py  test_app_web_runtime_state.py  test_asset_extractor.py  test_chunker.py  test_e2e.py  test_eval_rag.py  test_evidence_trail.py  test_export_ontology_rdf_script.py  test_graph_retrieval.py  test_index_metadata.py  test_ingest_cli.py  test_local_adapter.py  test_local_model_env.py  test_local_model_verifier.py  test_manifest.py  test_model_bakeoff_plan.py  test_model_config.py  test_multimodal_context_bridge.py  test_ontology_answer_composer.py  test_ontology_quality_gate.py  (+27 more)
(+73 files in other folders)
